[package]
name = "swc_plugin_lazy_init"
version = "0.0.1"
authors = ["Reiss Davidson <https://github.com/reiss-d>"]
edition = "2021"
license = "MIT"
publish = false
description = "SWC plugin for lazily initalizing variables."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
use-testing = []
use-plugin_transform = [
  "swc_core/common",
  "swc_core/ecma_plugin_transform",
  "rand",
]

[dependencies]
swc_atoms = "=0.5.9"
swc_common = "=0.32.1"
swc_core = { version = "=0.81.8", optional = true }
swc_ecma_ast = "=0.108.0"
swc_ecma_utils = "=0.121.1"
swc_ecma_visit = "=0.94.0"

rand = { version = "0.8.5", optional = true }
serde = { version = "=1.0.188", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1.37", features = ["release_max_level_off"] }

[dev-dependencies]
swc_ecma_parser = "=0.138.1"
swc_ecma_transforms_base = "=0.131.2"
swc_ecma_transforms_testing = "=0.134.2"

testing = "0.34.1"
